# xy_singleton

./: .xy-codehub-ci.yml  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
xy_singleton/: Decorators.py  Singleton.py
